# Programming

./: README.md
Assembly/: check.txt  div0.asm  farjmp.asm  finalD.asm  finalD_2.asm  finalE.asm  overflow.asm  random.txt
C#/: ReamME.md
C#/PaymentLIB/: Documentation.md
C#/PaymentLIB/Payment/: Data.cs  FieldListBase.cs  IFieldList.cs  IPayment.cs  Payment.cs
C++/: ReadME.md
C++/LinkedList/: ReadME.md
C++/LinkedList/1SignlyLinkedList/: SinglyLinkedList.h
C++/LinkedList/2DoublyLinkedList/: DoublyLinkedList.h
C++/OPENCVTEST/: CMakeLists.txt  ascii_art.cpp
Haskell/HW3/: prac1.hs  prac2.hs  prac3.hs  teoretical.hs
Haskell/HW4/: prac1.hs  prac2.hs  teo.hs
Haskell/learnin/: demo2022.hs  edc16f57-9bdd-4d2f-a112-1813e9ebce1f.hs  learn.hs
JavaScript/YT_ADD_skipper/: background.js  index.html  manifest.json  script.js
Python/BoostedKnightPath/: solution.py  visualizer.py
Python/FlashServer/: ReadME.md  main.py
Python/IdeaBOT-file/: ReadME.md  ideaBOT.py  test  thejs.json
Python/Random/: idk.py
Python/RequestSender/: CookiesGatherer.py  RequestSender.py  app.py  tests.py
Python/Steganography/00/: basic.py
Python/Steganography/01/: f3steg.py
Python/Steganography/02/: evenOdd.py
Python/Steganography/03/: LSBimage.py
Python/Steganography/04/: PatchWoks.py
Python/Steganography/05/: SpreadSpectrum.py
Python/Steganography/06/: LastStep.py
Python/Steganography/functions/: randomChars.py  resolution.py
Python/Turtle/: turtle_lol.py
Python/binaryStuff/: binaryToDecimal.py
Python/speechToText/: main.py
(+19 files in other folders)
